src/test/resources/arp/invalid/arp_nonlinear_rd.sil
// Any copyright is dedicated to the Public Domain.
// http://creativecommons.org/publicdomain/zero/1.0/

field f: Int

method foo(x: Ref)
//:: ExpectedOutput(internal:feature.unsupported)
requires acc(x.f, rd*rd)
//:: ExpectedOutput(internal:feature.unsupported)
ensures acc(x.f, rd*rd)
{
}